# THE-ANA

./: AGENTS (2).md  App.tsx  README.md  agents  ana_analyzers.py  ana_api.py  ana_generators.py  ana_main.py  codex_task.md  constants.tsx  eslint.config.mjs  index.html  main.tsx  metadata.json  package-lock.json  package.json  pyproject.toml  tsconfig.json  types.ts  vite.config.ts
__tests__/: App.test.tsx
ai/: agentFactory.ts  orchestration.ts  types.ts
components/: ActionButton.tsx  CompletionEnhancements.tsx  ErrorMessage.tsx  FileUpload.tsx  Footer.tsx  Header.tsx  Loader.tsx  RequirementsForm.tsx  ResultsDisplay.tsx  TaskSelector.tsx
fastapi/: __init__.py  encoders.py  responses.py
httpx/: __init__.py
instructions/: adaptive_rewriting_instructions.ts  advanced_module_output_structure.ts  analysis_instructions.ts  audience_resonance_instructions.ts  character_deep_analyzer_instructions.ts  character_network_instructions.ts  character_voice_instructions.ts  completion_instructions.ts  conflict_dialogue_generator_instructions.ts  conflict_dynamics_instructions.ts  creative_instructions.ts  cultural_historical_analyzer_instructions.ts  dialogue_advanced_analyzer_instructions.ts  dialogue_forensics_instructions.ts  foreshadowing_detector_instructions.ts  integrated_instructions.ts  literary_quality_analyzer_instructions.ts  platform_adapter_instructions.ts  plot_predictor_instructions.ts  producibility_analyzer_instructions.ts  recommendations_generator_instructions.ts  rhythm_mapping_instructions.ts  scene_generator_instructions.ts  (+10 more)
pydantic/: __init__.py
(+123 files in other folders)
