[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-ana"
version = "0.1.0"
description = "Advanced narrative analysis and generation toolkit for THE-ANA"
authors = [{name = "THE-ANA Team"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.5.0",
  "nltk>=3.8.1",
  "spacy>=3.7.0",
  "transformers>=4.35.0",
  "torch>=2.0.0",
  "scikit-learn>=1.3.0",
  "numpy>=1.24.0",
  "typing-extensions>=4.8.0",
  "httpx>=0.25.0",
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0"
]

[project.optional-dependencies]
all = []

[project.urls]
Homepage = "https://example.com/the-ana"
